# Copyright (C) 2006 International Business Machines and others.
# All Rights Reserved.
# This file is distributed under the Common Public License.

## $Id$

# Author:  Andreas Waechter           IBM    2006-04-13

AUTOMAKE_OPTIONS = foreign

########################################################################
#                      unitTest for CoinUtils                          #
########################################################################

noinst_PROGRAMS = unitTest

unitTest_SOURCES = \
	CoinDenseVectorTest.cpp \
	CoinErrorTest.cpp \
	CoinIndexedVectorTest.cpp \
	CoinMessageHandlerTest.cpp \
	CoinModelTest.cpp \
	CoinMpsIOTest.cpp \
	CoinPackedMatrixTest.cpp \
	CoinPackedVectorTest.cpp \
	CoinShallowPackedVectorTest.cpp \
	unitTest.cpp

# List libraries of COIN projects
unitTest_LDADD = ../src/libCoinUtils.la

# List additional libraries
LIBS += $(COINUTILSLIB_LIBS)

# Here list all include flags, relative to this "srcdir" directory.  This
# "cygpath" stuff is necessary to compile with native compilers on Cygwin
AM_CPPFLAGS = -I`$(CYGPATH_W) $(srcdir)/../src`

# This line is necessary to allow VPATH compilation with MS compilers
# on Cygwin
DEFAULT_INCLUDES = -I. -I`$(CYGPATH_W) $(srcdir)` -I$(top_builddir)/inc

unittestflags =
if COIN_HAS_SAMPLE
  unittestflags += -mpsDir=`$(CYGPATH_W) $(SAMPLE_DATA)`
endif
if COIN_HAS_NETLIB
  unittestflags += -netlibDir=`$(CYGPATH_W) $(NETLIB_DATA)` -testModel=adlittle.mps
endif

test: unitTest$(EXEEXT)
	./unitTest$(EXEEXT) $(unittestflags)

.PHONY: test

########################################################################
#                          Cleaning stuff                              #
########################################################################

# Here we list everything that is not generated by the compiler, e.g.,
# output files of a program

DISTCLEANFILES = \
	byColumn.mps  byRow.mps  CoinMpsIoTest.mps  string.mps
